--- a/views/notification.handlebars
+++ b/views/notification.handlebars
@@ -30,8 +30,7 @@
                         <th scope="col">Name</th>
                         <th scope="col">Number</th>
                         <th scope="col">
-                            <button type="button" class="btn btn-warning btn-sm" id="selectAllBtn">Select All</button>
-                            <button type="button" class="btn btn-outline-warning btn-sm" id="cancelAllBtn">Cancel</button>
+                            <button type="button" class="btn btn-warning btn-sm" id="selectBtn">Select All</button>
                         </th>
                     </tr>
                 </thead>
@@ -104,7 +103,7 @@
         <div class="row mb-4">
             <div class="col-sm-2"></div>
 			<div class="col-sm">
-				<a class="btn btn-outline-warning" role="button" href="/notification">Cancel</a>
+				<a class="btn btn-outline-warning" role="button" href="/success">Cancel</a>
                 <a class="btn btn-warning " id="sendBtn" role="button">Send</a>
 			</div>
 		</div>
