--- a/views/invite-friends.handlebars
+++ b/views/invite-friends.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>    
 <html lang="en">    
 <head>    
-    <title>7 - Invite Friends</title>    
+    <title>7 - Invite Friends under construction</title>    
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<script src="https://code.jquery.com/jquery.js"></script>
